--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="$FLUTTER_BASE_HREF">
+  <base href="$FLUTTER_BASE_HREF/andrea_app_ui">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -37,7 +37,7 @@
     var serviceWorkerVersion = null;
   </script>
   <!-- This script adds the flutter initialization JS code -->
-  <script src="andrea_app_ui/flutter.js" defer></script>
+  <script src="flutter.js" defer></script>
 </head>
 <body>
   <script>
