--- a/web/index.html
+++ b/web/index.html
@@ -24,13 +24,13 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="andrea_app_ui">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <link rel="apple-touch-icon" href="andrea_app_ui/icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="andrea_app_ui/favicon.png"/>
 
   <title>andrea_app_ui</title>
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="andrea_app_ui/manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
